zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_half_page_scroll_up_action-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1641
expression: "format!(\"{}\", snapshot_count)"
---
2
