zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_move_focus_or_tab_pane_action-2.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:?}\", cursor_coordinates)"
---
Some((41, 1))
