zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_move_focus_pane_action-2.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 999
expression: "format!(\"{:?}\", cursor_coordinates)"
---
Some((1, 1))
